--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a096bc">  <td>22/01/25 21:45:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoadHomePage.LoadBaseUrl()[pri:0, instance:stepDefinitions.LoadHomePage@3e2822]">LoadBaseUrl</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 21:46:07</td>   <td>14202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.clickAddToCart()[pri:3, instance:stepDefinitions.AddtoCart@1849db1a]">clickAddToCart</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="f1baf5">  <td>22/01/25 21:45:48</td>   <td>-5144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.placeOrder()[pri:1, instance:stepDefinitions.Checkout@5ac86ba5]">placeOrder</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="f1baf5">  <td>22/01/25 21:45:37</td>   <td>-15497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.proceedtoCheckOutPage()[pri:0, instance:stepDefinitions.Checkout@5ac86ba5]">proceedtoCheckOutPage</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 21:46:06</td>   <td>13685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartViaClick()[pri:1, instance:stepDefinitions.AddtoCart@1849db1a]">AddItemsToCartViaClick</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 21:46:07</td>   <td>13877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartviaInput()[pri:2, instance:stepDefinitions.AddtoCart@1849db1a]">AddItemsToCartviaInput</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="f1baf5">  <td>22/01/25 21:45:42</td>   <td>-10296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditions()[pri:1, instance:stepDefinitions.Checkout@5ac86ba5]">acceptTermsAndConditions</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 21:46:06</td>   <td>13399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.reduceitemsOnCartToZero()[pri:0, instance:stepDefinitions.AddtoCart@1849db1a]">reduceitemsOnCartToZero</td> 
-  <td>main@105751207</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>22/01/26 21:54:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditionsPositive()[pri:3, instance:stepDefinitions.Checkout@6c67e137]">acceptTermsAndConditionsPositive</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>22/01/26 21:54:28</td>   <td>-15601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.proceedtoCheckOutPage()[pri:0, instance:stepDefinitions.Checkout@6c67e137]">proceedtoCheckOutPage</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="a096bc">  <td>22/01/26 21:54:49</td>   <td>5148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoadHomePage.LoadBaseUrl()[pri:0, instance:stepDefinitions.LoadHomePage@79e18e38]">LoadBaseUrl</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 21:56:56</td>   <td>131699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.reduceitemsOnCartToZero()[pri:0, instance:stepDefinitions.AddtoCart@69c79f09]">reduceitemsOnCartToZero</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 21:57:06</td>   <td>142001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartviaInput()[pri:2, instance:stepDefinitions.AddtoCart@69c79f09]">AddItemsToCartviaInput</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 21:57:01</td>   <td>136862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartViaClick()[pri:1, instance:stepDefinitions.AddtoCart@69c79f09]">AddItemsToCartViaClick</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>22/01/26 21:54:39</td>   <td>-5149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditionsNegative()[pri:2, instance:stepDefinitions.Checkout@6c67e137]">acceptTermsAndConditionsNegative</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 21:57:11</td>   <td>147151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.clickAddToCart()[pri:3, instance:stepDefinitions.AddtoCart@69c79f09]">clickAddToCart</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>22/01/26 21:54:34</td>   <td>-10323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.placeOrder()[pri:1, instance:stepDefinitions.Checkout@6c67e137]">placeOrder</td> 
+  <td>main@1174881426</td>   <td></td> </tr>
 </table>
