--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -15,11 +15,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>acceptTermsAndConditions</td>
+<td>placeOrder</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>placeOrder</td>
+<td>acceptTermsAndConditionsPositive</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>acceptTermsAndConditionsNegative</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
