--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a096bc">  <td>22/01/25 22:13:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.reduceitemsOnCartToZero()[pri:0, instance:stepDefinitions.AddtoCart@3e2822]">reduceitemsOnCartToZero</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="a096bc">  <td>22/01/25 22:13:20</td>   <td>197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartViaClick()[pri:1, instance:stepDefinitions.AddtoCart@3e2822]">AddItemsToCartViaClick</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 22:13:22</td>   <td>1855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditions()[pri:2, instance:stepDefinitions.Checkout@1849db1a]">acceptTermsAndConditions</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 22:13:22</td>   <td>1734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.placeOrder()[pri:1, instance:stepDefinitions.Checkout@1849db1a]">placeOrder</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="edc48a">  <td>22/01/25 22:13:21</td>   <td>903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.proceedtoCheckOutPage()[pri:0, instance:stepDefinitions.Checkout@1849db1a]">proceedtoCheckOutPage</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="a096bc">  <td>22/01/25 22:13:21</td>   <td>538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.clickAddToCart()[pri:3, instance:stepDefinitions.AddtoCart@3e2822]">clickAddToCart</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="f1baf5">  <td>22/01/25 22:13:07</td>   <td>-12753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoadHomePage.LoadBaseUrl()[pri:0, instance:stepDefinitions.LoadHomePage@5ac86ba5]">LoadBaseUrl</td> 
-  <td>main@105751207</td>   <td></td> </tr>
-<tr bgcolor="a096bc">  <td>22/01/25 22:13:21</td>   <td>337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartviaInput()[pri:2, instance:stepDefinitions.AddtoCart@3e2822]">AddItemsToCartviaInput</td> 
-  <td>main@105751207</td>   <td></td> </tr>
+<tr bgcolor="a096bc">  <td>22/01/26 22:01:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartViaClick()[pri:1, instance:stepDefinitions.AddtoCart@1849db1a]">AddItemsToCartViaClick</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 22:01:55</td>   <td>1968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.placeOrder()[pri:1, instance:stepDefinitions.Checkout@5fcacc0]">placeOrder</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="a096bc">  <td>22/01/26 22:01:53</td>   <td>171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.AddItemsToCartviaInput()[pri:2, instance:stepDefinitions.AddtoCart@1849db1a]">AddItemsToCartviaInput</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="f1baf5">  <td>22/01/26 22:01:19</td>   <td>-34418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoadHomePage.LoadBaseUrl()[pri:0, instance:stepDefinitions.LoadHomePage@191ae03f]">LoadBaseUrl</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 22:01:57</td>   <td>3720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditionsPositive()[pri:3, instance:stepDefinitions.Checkout@5fcacc0]">acceptTermsAndConditionsPositive</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 22:01:55</td>   <td>2171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.acceptTermsAndConditionsNegative()[pri:2, instance:stepDefinitions.Checkout@5fcacc0]">acceptTermsAndConditionsNegative</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="a096bc">  <td>22/01/26 22:01:54</td>   <td>394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.clickAddToCart()[pri:3, instance:stepDefinitions.AddtoCart@1849db1a]">clickAddToCart</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="edc48a">  <td>22/01/26 22:01:54</td>   <td>943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout.proceedtoCheckOutPage()[pri:0, instance:stepDefinitions.Checkout@5fcacc0]">proceedtoCheckOutPage</td> 
+  <td>main@745627268</td>   <td></td> </tr>
+<tr bgcolor="a096bc">  <td>22/01/26 22:01:53</td>   <td>-281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddtoCart.reduceitemsOnCartToZero()[pri:0, instance:stepDefinitions.AddtoCart@1849db1a]">reduceitemsOnCartToZero</td> 
+  <td>main@745627268</td>   <td></td> </tr>
 </table>
